--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="already_have_an_account">Already have an account?</string>
     <string name="sign_up_button">Sign Up</string>
     <string name="create_a_new_account_to_try_famous_recipes">Create a new account to try famous recipes</string>
+    <string name="home">Home</string>
 </resources>
